# dew-index

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  Makefile  README.md  X APIs.txt  next.config.ts  package-lock.json  package.json  pyproject.toml  start.sh  vercel.json
Timeline/: README.md  build_feed.py  sources.json
app/: page with asp draft.txt  page.tsx
dew_theory_library/: .gitignore  Makefile  README.md  pyproject.toml
dew_theory_library/dew_theory_library_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dew_theory_library/dewlib/: __init__.py  canon.py  chunk.py  config.py  digest.py  embed.py  extract.py  feed_health.py  health.py  index.py  ledger_db.py  ledger_explain.py  ledger_import.py  ledger_models.py  ledger_store.py  ocr.py  recommend_review.py  scan_config.py  scan_db.py  scan_inputs.py  scan_recommend.py  scan_report.py  scan_runtime.py  search.py  signal_tune.py  triage.py  util.py  validate.py
dew_theory_library/scripts/: build_all.py  build_index.py  build_manifest.py  canon_registry.py  chunk_pages.py  extract_pages.py  ledger_init.py  ledger_serve.py  ledger_smoke.py  library_health.py  ocr_batch.py  reco_queue.py  scan_digest.py  scan_run.py  scan_serve.py  seed_feeds.py  seed_signal_pack.py  signal_tune.py  triage_corpus.py  validate_retrieval.py
dew_theory_library/server/: __init__.py  api.py  ledger_api.py  scan_api.py
dew_theory_library/tests/: test_extract_chunk.py  test_index_search_hash_embedder.py  test_ledger_v1.py  test_manifest.py  test_operator_workflow_v1.py  test_scanner_v1.py  test_trust_layer.py
(+132 files in other folders)
