[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dew-theory-library-v1"
version = "0.1.0"
description = "Local ETL + hybrid search service for citation-safe PDF theory library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pymupdf>=1.24.0",
  "numpy>=1.26.0",
  "faiss-cpu>=1.8.0",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "reportlab>=4.0.0",
]
st = [
  "sentence-transformers>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["dewlib*", "server*"]
